EXTRA_DIST = gtkrc gtk3.css preview.jpg window-bg.png list-selected.png \
    time-trough.png time-slider-disabled.png  scrollbar-slider-vert.png \
    time-slider-normal.png time-slider-prelight.png null.png \
    scrollbar-trough-vert.png scrollbar-slider-vert-prelight.png \
    scrollbar-stepper-down.png scrollbar-stepper-down-prelight.png \
    scrollbar-stepper-down-insens.png scrollbar-stepper-up-insens.png \
    scrollbar-stepper-up.png scrollbar-stepper-up-prelight.png 

Monochromedir = ${datadir}/RhythmCat/themes/Monochrome

Monochrome_DATA = gtkrc gtk3.css preview.jpg window-bg.png list-selected.png \
    time-trough.png time-slider-disabled.png  scrollbar-slider-vert.png \
    time-slider-normal.png time-slider-prelight.png null.png \
    scrollbar-trough-vert.png scrollbar-slider-vert-prelight.png \
    scrollbar-stepper-down.png scrollbar-stepper-down-prelight.png \
    scrollbar-stepper-down-insens.png scrollbar-stepper-up-insens.png \
    scrollbar-stepper-up.png scrollbar-stepper-up-prelight.png
